fixed icon spacing

--- a/src/pages/Sections/Projects/ProjectsSection.css
+++ b/src/pages/Sections/Projects/ProjectsSection.css
@@ -174,7 +174,7 @@
 }
 
 .project-container-secondary-left-bottom .view-container a svg {
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .project-container-secondary-left-middle p {
